ChannelAssociatedGroupController: expect that endpoints may not be in closed state during destruction.

This happens when a NotifyPeerEndpointClosed message been received,but (1) the interface ID hasn't been used to create local endpoint handle; and (2) a NotifyEndpointClosedBeforeSent hasn't been received.

BUG=684358

Review-Url: https://codereview.chromium.org/2656573004
Cr-Commit-Position: refs/heads/master@{#445829}

Former-commit-id: e003d59373ed5f176a8b521c15a7fc0a6ff6876f